--- a/html/css/maijz-frameworks.css
+++ b/html/css/maijz-frameworks.css
@@ -149,3 +149,16 @@ table {  border-spacing: 0;  border-collapse: collapse;  }
 .bg-red{background-color:#d73a49 !important}.bg-red-light{background-color:#ffdce0 !important}
 .bg-yellow{background-color:#ffd33d !important}.bg-yellow-light{background-color:#fff5b1 !important}
 .bg-purple{background-color:#6f42c1 !important}.bg-purple-light{background-color:#f5f0ff !important}
+
+
+.opacity-10{  opacity: 1;  }  .opacity-9{  opacity: 0.9;  }
+.opacity-8{  opacity: 0.8;  }  .opacity-7{  opacity: 0.7;  }
+.opacity-6{  opacity: 0.6;  }  .opacity-5{  opacity: 0.5;  }
+.opacity-4{  opacity: 0.4;  }  .opacity-3{  opacity: 0.3;  }
+.opacity-2{  opacity: 0.2;  }  .opacity-1{  opacity: 0.1;  }
+.opacity-0{  opacity: 0.0;  }  .opacity-10-hover:hover{  opacity: 1;  }
+.opacity-9-hover:hover{  opacity: 0.9;  }  .opacity-8-hover:hover{  opacity: 0.8;  }
+.opacity-7-hover:hover{  opacity: 0.7;  }  .opacity-6-hover:hover{  opacity: 0.6;  }
+.opacity-5-hover:hover{  opacity: 0.5;  }  .opacity-4-hover:hover{  opacity: 0.4;  }
+.opacity-3-hover:hover{  opacity: 0.3;  }  .opacity-2-hover:hover{  opacity: 0.2;  }
+.opacity-1-hover:hover{  opacity: 0.1;  }  .opacity-0-hover:hover{  opacity: 0.0;  }
