--- a/html/css/maijz-frameworks.css
+++ b/html/css/maijz-frameworks.css
@@ -20,7 +20,7 @@ a {  text-decoration: none;  background-color: transparent;  }
 
 a:active, a:hover {  outline-width: 0;  }
 
-ul, ol {  list-style: none;  }
+.list-style-none {  list-style: none;  }
 table {  border-spacing: 0;  border-collapse: collapse;  }
 /***********************************************************/
 
